Revert "👽 fix spacing issues on miro desktop app"
This reverts commit 68c3d8e84360fc01aefaaf553dc005e416e96b68.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -79,7 +79,3 @@ a:active.muted {
 .scrollable {
   overflow-y: auto;
 }
-
-span.emoji {
-  letter-spacing: 0.5em;
-}
